<?xml version="1.0"?>
<package format="3">
  <name>map_to_jpeg</name>
  <version>1.0.0</version>
  <description>
    Provides tools to compress and decompress occupancy grid maps using JPEG, supporting robot pose overlay.
  </description>
  <maintainer email="mcormier@coroware.com">Morgan Cormier</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>eigen3</depend>
  <depend>opencv</depend>
  <depend>facobot_msg</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>